src/test/deca/syntax/parser/valid/or_expr_three_operands.deca
// Parser test with 3 conditions in "if"

{
  if (x || y || z) {
    x = 5;
  }
}
