src/test/deca/syntax/parser/invalid/or_expr_without_an_op.deca
// Missing operand after OR

{
    if (x || ){
        x = 5;
    }
}